GetTransactionByHash, GetTransactionsInBlock
